force-app/main/default/objects/WC_Class_Location__c/WC_Class_Location__c.object-meta.xml
<CustomObject>
    <label>WC Class Location</label>
    <nameField>
        <displayFormat>WCL-{0000000}</displayFormat>
        <label>WC Class Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WC Class Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>