force-app/main/default/objects/WC_Class_Location__c/fields/Appetite_Flag__c.field-meta.xml
<CustomField>
    <fullName>Appetite_Flag__c</fullName>
    <label>Appetite Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Appetite</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Out of Appetite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>