force-app/main/default/objects/WC_Class_Location__c/fields/Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Class_Description__c</fullName>
    <label>Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>