force-app/main/default/objects/WC_Class_Location__c/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <label>Location Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>