force-app/main/default/objects/WC_Class_Location__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>WC Class Locations</relationshipLabel>
    <relationshipName>WC_Class_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>